syntax = "proto3";

package ru.clevertec.newspaper.api.news.dto;

option java_multiple_files = true;

import "comment.proto";

message NewNewsDto {
  string timestamp = 1;
  string username = 2;
  string title = 3;
  string text = 4;
}

message NewsDetailsDto {
  int64 id = 1;
  string timestamp = 2;
  string username = 3;
  string title = 4;
  string text = 5;
  repeated comment.dto.CommentDetailsDto commentList = 6;
}

message NewsTitleDto {
  int64 id = 1;
  string title = 2;
}

message UpdateNewsDto {
  string timestamp = 1;
  string username = 2;
  string title = 3;
  string text = 4;
}

message NewsTitleDtoList {
  repeated NewsTitleDto newsList = 1;
}